.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:05:44 **** Incremental Build of configuration Debug for project stm32_lab1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'turnOnLight':
../Core/Src/main.c:76:22: error: 'LED_RED1_GPIO_Port' undeclared (first use in this function)
   76 |    HAL_GPIO_WritePin(LED_RED1_GPIO_Port, LED_RED1_Pin, GPIO_PIN_RESET);
      |                      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:76:22: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:76:42: error: 'LED_RED1_Pin' undeclared (first use in this function); did you mean 'LED_RED1'?
   76 |    HAL_GPIO_WritePin(LED_RED1_GPIO_Port, LED_RED1_Pin, GPIO_PIN_RESET);
      |                                          ^~~~~~~~~~~~
      |                                          LED_RED1
../Core/Src/main.c:77:22: error: 'LED_YELLOW1_GPIO_Port' undeclared (first use in this function)
   77 |    HAL_GPIO_WritePin(LED_YELLOW1_GPIO_Port, LED_YELLOW1_Pin, GPIO_PIN_SET);
      |                      ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:77:45: error: 'LED_YELLOW1_Pin' undeclared (first use in this function); did you mean 'LED_YELLOW1'?
   77 |    HAL_GPIO_WritePin(LED_YELLOW1_GPIO_Port, LED_YELLOW1_Pin, GPIO_PIN_SET);
      |                                             ^~~~~~~~~~~~~~~
      |                                             LED_YELLOW1
../Core/Src/main.c:78:22: error: 'LED_GREEN1_GPIO_Port' undeclared (first use in this function)
   78 |    HAL_GPIO_WritePin(LED_GREEN1_GPIO_Port, LED_GREEN1_Pin, GPIO_PIN_SET);
      |                      ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:78:44: error: 'LED_GREEN1_Pin' undeclared (first use in this function); did you mean 'LED_GREEN1'?
   78 |    HAL_GPIO_WritePin(LED_GREEN1_GPIO_Port, LED_GREEN1_Pin, GPIO_PIN_SET);
      |                                            ^~~~~~~~~~~~~~
      |                                            LED_GREEN1
../Core/Src/main.c:94:22: error: 'LED_RED2_GPIO_Port' undeclared (first use in this function)
   94 |    HAL_GPIO_WritePin(LED_RED2_GPIO_Port, LED_RED2_Pin, GPIO_PIN_RESET);
      |                      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:94:42: error: 'LED_RED2_Pin' undeclared (first use in this function); did you mean 'LED_RED2'?
   94 |    HAL_GPIO_WritePin(LED_RED2_GPIO_Port, LED_RED2_Pin, GPIO_PIN_RESET);
      |                                          ^~~~~~~~~~~~
      |                                          LED_RED2
../Core/Src/main.c:95:22: error: 'LED_YELLOW2_GPIO_Port' undeclared (first use in this function)
   95 |    HAL_GPIO_WritePin(LED_YELLOW2_GPIO_Port, LED_YELLOW2_Pin, GPIO_PIN_SET);
      |                      ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:95:45: error: 'LED_YELLOW2_Pin' undeclared (first use in this function); did you mean 'LED_YELLOW2'?
   95 |    HAL_GPIO_WritePin(LED_YELLOW2_GPIO_Port, LED_YELLOW2_Pin, GPIO_PIN_SET);
      |                                             ^~~~~~~~~~~~~~~
      |                                             LED_YELLOW2
../Core/Src/main.c:96:22: error: 'LED_GREEN2_GPIO_Port' undeclared (first use in this function)
   96 |    HAL_GPIO_WritePin(LED_GREEN2_GPIO_Port, LED_GREEN2_Pin, GPIO_PIN_SET);
      |                      ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:96:44: error: 'LED_GREEN2_Pin' undeclared (first use in this function); did you mean 'LED_GREEN2'?
   96 |    HAL_GPIO_WritePin(LED_GREEN2_GPIO_Port, LED_GREEN2_Pin, GPIO_PIN_SET);
      |                                            ^~~~~~~~~~~~~~
      |                                            LED_GREEN2
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
